// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCdkDiffWorkflowYml - cdk diff.yml file added a single env to diff - multiple stacks given to diff 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: cdk-diff
on:
  pull_request: {}
  workflow_dispatch: {}
permissions:
  id-token: write
  contents: write
  pull-requests: write
jobs:
  diff:
    runs-on: ubuntu-latest
    env:
      CI: "true"
      REPO_NAME: \${{ github.event.repository.name }}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: GitHub Packages authorization
        run: |-
          cat > .npmrc <<EOF
          //npm.pkg.github.com/:_authToken=\${{ secrets.ALL_PACKAGE_READ_TOKEN }}
          @time-loop:registry=https://npm.pkg.github.com/
          EOF
      - name: Setup Node.js
        uses: actions/setup-node@v3
        with:
          node-version: 20.11.1
      - name: Install dependencies
        run: yarn install --check-files
      - name: capture stacks to diff
        run: |-
          ./node_modules/.bin/cdk ls -l -j --notices=false > cdk-ls.json
          STACKS_TO_DIFF_QA="UsQaSquadNameDynamoDBTableNameStack UsQaSquadNameS3BucketNameStack"
          echo "STACKS_TO_DIFF_QA=$STACKS_TO_DIFF_QA" >> $GITHUB_ENV
      - name: configure qa aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-qa
          role-duration-seconds: 900
          aws-region: us-west-2
      - name: diff qa
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_QA --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-qa.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-qa.log && echo 'QA_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: cdk-notify
        run: |-
          curl -L "https://github.com/karlderkaefer/cdk-notifier/releases/download/v2.3.2/cdk-notifier_$(uname)_amd64.gz" -o cdk-notifier.gz
          gunzip cdk-notifier.gz && chmod +x cdk-notifier && rm -rf cdk-notifier.gz
          ./cdk-notifier --log-file ./cdk-qa.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'qa Stacks - If truncated please see the action for the full log!'
      - name: Remove 'qa-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.QA_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "qa-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "qa-no-changes"
            })
            }
      - name: Apply 'qa-no-changes' label based on diff status
        if: env.QA_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["qa-no-changes"]
            })
      - name: Should auto merge
        id: should-auto-merge
        if: env.QA_HAS_NO_DIFF == 'true' && github.event.pull_request.user.login == 'cu-infra-svc-git'
        run: echo "auto-merge=true" >> $GITHUB_OUTPUT
      - name: Enable automerge
        uses: daneden/enable-automerge-action@v1.0.2
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          merge-method: SQUASH
          allowed-author: cu-infra-svc-git
      - name: Auto approve
        uses: hmarr/auto-approve-action@v2.2.1
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
      - name: Save processed diff logs
        uses: actions/upload-artifact@v3.1.2
        with:
          name: ProcessedDiffLogs
          path: "*.log"
          retention-days: 3
"
`;

exports[`addCdkDiffWorkflowYml - cdk diff.yml file added a single env to diff - single explicit stack given to diff 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: cdk-diff
on:
  pull_request: {}
  workflow_dispatch: {}
permissions:
  id-token: write
  contents: write
  pull-requests: write
jobs:
  diff:
    runs-on: ubuntu-latest
    env:
      CI: "true"
      REPO_NAME: \${{ github.event.repository.name }}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: GitHub Packages authorization
        run: |-
          cat > .npmrc <<EOF
          //npm.pkg.github.com/:_authToken=\${{ secrets.ALL_PACKAGE_READ_TOKEN }}
          @time-loop:registry=https://npm.pkg.github.com/
          EOF
      - name: Setup Node.js
        uses: actions/setup-node@v3
        with:
          node-version: 20.11.1
      - name: Install dependencies
        run: yarn install --check-files
      - name: capture stacks to diff
        run: |-
          ./node_modules/.bin/cdk ls -l -j --notices=false > cdk-ls.json
          STACKS_TO_DIFF_QA="UsQaSquadNameDynamoDBTableNameStack"
          echo "STACKS_TO_DIFF_QA=$STACKS_TO_DIFF_QA" >> $GITHUB_ENV
      - name: configure qa aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-qa
          role-duration-seconds: 900
          aws-region: us-west-2
      - name: diff qa
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_QA --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-qa.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-qa.log && echo 'QA_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: cdk-notify
        run: |-
          curl -L "https://github.com/karlderkaefer/cdk-notifier/releases/download/v2.3.2/cdk-notifier_$(uname)_amd64.gz" -o cdk-notifier.gz
          gunzip cdk-notifier.gz && chmod +x cdk-notifier && rm -rf cdk-notifier.gz
          ./cdk-notifier --log-file ./cdk-qa.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'qa Stacks - If truncated please see the action for the full log!'
      - name: Remove 'qa-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.QA_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "qa-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "qa-no-changes"
            })
            }
      - name: Apply 'qa-no-changes' label based on diff status
        if: env.QA_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["qa-no-changes"]
            })
      - name: Should auto merge
        id: should-auto-merge
        if: env.QA_HAS_NO_DIFF == 'true' && github.event.pull_request.user.login == 'cu-infra-svc-git'
        run: echo "auto-merge=true" >> $GITHUB_OUTPUT
      - name: Enable automerge
        uses: daneden/enable-automerge-action@v1.0.2
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          merge-method: SQUASH
          allowed-author: cu-infra-svc-git
      - name: Auto approve
        uses: hmarr/auto-approve-action@v2.2.1
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
      - name: Save processed diff logs
        uses: actions/upload-artifact@v3.1.2
        with:
          name: ProcessedDiffLogs
          path: "*.log"
          retention-days: 3
"
`;

exports[`addCdkDiffWorkflowYml - cdk diff.yml file added a single env to diff 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: cdk-diff
on:
  pull_request: {}
  workflow_dispatch: {}
permissions:
  id-token: write
  contents: write
  pull-requests: write
jobs:
  diff:
    runs-on: ubuntu-latest
    env:
      CI: "true"
      REPO_NAME: \${{ github.event.repository.name }}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: GitHub Packages authorization
        run: |-
          cat > .npmrc <<EOF
          //npm.pkg.github.com/:_authToken=\${{ secrets.ALL_PACKAGE_READ_TOKEN }}
          @time-loop:registry=https://npm.pkg.github.com/
          EOF
      - name: Setup Node.js
        uses: actions/setup-node@v3
        with:
          node-version: 20.11.1
      - name: Install dependencies
        run: yarn install --check-files
      - name: capture stacks to diff
        run: |-
          ./node_modules/.bin/cdk ls -l -j --notices=false > cdk-ls.json
          STACKS_TO_DIFF_QA=$(jq -r '[.[].id | select(contains("Qa")) ] | join(" ")' cdk-ls.json)
          echo "STACKS_TO_DIFF_QA=$STACKS_TO_DIFF_QA" >> $GITHUB_ENV
      - name: configure qa aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-qa
          role-duration-seconds: 900
          aws-region: us-west-2
      - name: diff qa
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_QA --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-qa.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-qa.log && echo 'QA_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: cdk-notify
        run: |-
          curl -L "https://github.com/karlderkaefer/cdk-notifier/releases/download/v2.3.2/cdk-notifier_$(uname)_amd64.gz" -o cdk-notifier.gz
          gunzip cdk-notifier.gz && chmod +x cdk-notifier && rm -rf cdk-notifier.gz
          ./cdk-notifier --log-file ./cdk-qa.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'qa Stacks - If truncated please see the action for the full log!'
      - name: Remove 'qa-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.QA_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "qa-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "qa-no-changes"
            })
            }
      - name: Apply 'qa-no-changes' label based on diff status
        if: env.QA_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["qa-no-changes"]
            })
      - name: Should auto merge
        id: should-auto-merge
        if: env.QA_HAS_NO_DIFF == 'true' && github.event.pull_request.user.login == 'cu-infra-svc-git'
        run: echo "auto-merge=true" >> $GITHUB_OUTPUT
      - name: Enable automerge
        uses: daneden/enable-automerge-action@v1.0.2
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          merge-method: SQUASH
          allowed-author: cu-infra-svc-git
      - name: Auto approve
        uses: hmarr/auto-approve-action@v2.2.1
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
      - name: Save processed diff logs
        uses: actions/upload-artifact@v3.1.2
        with:
          name: ProcessedDiffLogs
          path: "*.log"
          retention-days: 3
"
`;

exports[`addCdkDiffWorkflowYml - cdk diff.yml file added diff with roleDuration value set 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: cdk-diff
on:
  pull_request: {}
  workflow_dispatch: {}
permissions:
  id-token: write
  contents: write
  pull-requests: write
jobs:
  diff:
    runs-on: ubuntu-latest
    env:
      CI: "true"
      REPO_NAME: \${{ github.event.repository.name }}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: GitHub Packages authorization
        run: |-
          cat > .npmrc <<EOF
          //npm.pkg.github.com/:_authToken=\${{ secrets.ALL_PACKAGE_READ_TOKEN }}
          @time-loop:registry=https://npm.pkg.github.com/
          EOF
      - name: Setup Node.js
        uses: actions/setup-node@v3
        with:
          node-version: 20.11.1
      - name: Install dependencies
        run: yarn install --check-files
      - name: capture stacks to diff
        run: |-
          ./node_modules/.bin/cdk ls -l -j --notices=false > cdk-ls.json
          STACKS_TO_DIFF_QA=$(jq -r '[.[].id | select(contains("Qa")) ] | join(" ")' cdk-ls.json)
          echo "STACKS_TO_DIFF_QA=$STACKS_TO_DIFF_QA" >> $GITHUB_ENV
      - name: configure qa aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-qa
          role-duration-seconds: 1800
          aws-region: us-west-2
      - name: diff qa
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_QA --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-qa.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-qa.log && echo 'QA_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: cdk-notify
        run: |-
          curl -L "https://github.com/karlderkaefer/cdk-notifier/releases/download/v2.3.2/cdk-notifier_$(uname)_amd64.gz" -o cdk-notifier.gz
          gunzip cdk-notifier.gz && chmod +x cdk-notifier && rm -rf cdk-notifier.gz
          ./cdk-notifier --log-file ./cdk-qa.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'qa Stacks - If truncated please see the action for the full log!'
      - name: Remove 'qa-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.QA_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "qa-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "qa-no-changes"
            })
            }
      - name: Apply 'qa-no-changes' label based on diff status
        if: env.QA_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["qa-no-changes"]
            })
      - name: Should auto merge
        id: should-auto-merge
        if: env.QA_HAS_NO_DIFF == 'true' && github.event.pull_request.user.login == 'cu-infra-svc-git'
        run: echo "auto-merge=true" >> $GITHUB_OUTPUT
      - name: Enable automerge
        uses: daneden/enable-automerge-action@v1.0.2
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          merge-method: SQUASH
          allowed-author: cu-infra-svc-git
      - name: Auto approve
        uses: hmarr/auto-approve-action@v2.2.1
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
      - name: Save processed diff logs
        uses: actions/upload-artifact@v3.1.2
        with:
          name: ProcessedDiffLogs
          path: "*.log"
          retention-days: 3
"
`;

exports[`addCdkDiffWorkflowYml - cdk diff.yml file added multiple envs to diff 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: cdk-diff
on:
  pull_request: {}
  workflow_dispatch: {}
permissions:
  id-token: write
  contents: write
  pull-requests: write
jobs:
  diff:
    runs-on: ubuntu-latest
    env:
      CI: "true"
      REPO_NAME: \${{ github.event.repository.name }}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: GitHub Packages authorization
        run: |-
          cat > .npmrc <<EOF
          //npm.pkg.github.com/:_authToken=\${{ secrets.ALL_PACKAGE_READ_TOKEN }}
          @time-loop:registry=https://npm.pkg.github.com/
          EOF
      - name: Setup Node.js
        uses: actions/setup-node@v3
        with:
          node-version: 20.11.1
      - name: Install dependencies
        run: yarn install --check-files
      - name: capture stacks to diff
        run: |-
          ./node_modules/.bin/cdk ls -l -j --notices=false > cdk-ls.json
          STACKS_TO_DIFF_QA=$(jq -r '[.[].id | select(contains("Qa")) ] | join(" ")' cdk-ls.json)
          echo "STACKS_TO_DIFF_QA=$STACKS_TO_DIFF_QA" >> $GITHUB_ENV
          STACKS_TO_DIFF_STAGING=$(jq -r '[.[].id | select(contains("Staging")) ] | join(" ")' cdk-ls.json)
          echo "STACKS_TO_DIFF_STAGING=$STACKS_TO_DIFF_STAGING" >> $GITHUB_ENV
          STACKS_TO_DIFF_PROD=$(jq -r '[.[].id | select(contains("Prod")) ] | join(" ")' cdk-ls.json)
          echo "STACKS_TO_DIFF_PROD=$STACKS_TO_DIFF_PROD" >> $GITHUB_ENV
      - name: configure qa aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-qa
          role-duration-seconds: 900
          aws-region: us-west-2
      - name: diff qa
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_QA --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-qa.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-qa.log && echo 'QA_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: configure staging aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-staging
          role-duration-seconds: 900
          aws-region: us-west-2
      - name: diff staging
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_STAGING --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-staging.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-staging.log && echo 'STAGING_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: configure prod aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-prod
          role-duration-seconds: 900
          aws-region: us-west-2
      - name: diff prod
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_PROD --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-prod.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-prod.log && echo 'PROD_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: cdk-notify
        run: |-
          curl -L "https://github.com/karlderkaefer/cdk-notifier/releases/download/v2.3.2/cdk-notifier_$(uname)_amd64.gz" -o cdk-notifier.gz
          gunzip cdk-notifier.gz && chmod +x cdk-notifier && rm -rf cdk-notifier.gz
          ./cdk-notifier --log-file ./cdk-qa.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'qa Stacks - If truncated please see the action for the full log!'
          ./cdk-notifier --log-file ./cdk-staging.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'staging Stacks - If truncated please see the action for the full log!'
          ./cdk-notifier --log-file ./cdk-prod.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'prod Stacks - If truncated please see the action for the full log!'
      - name: Remove 'qa-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.QA_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "qa-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "qa-no-changes"
            })
            }
      - name: Remove 'staging-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.STAGING_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "staging-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "staging-no-changes"
            })
            }
      - name: Remove 'prod-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.PROD_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "prod-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "prod-no-changes"
            })
            }
      - name: Apply 'qa-no-changes' label based on diff status
        if: env.QA_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["qa-no-changes"]
            })
      - name: Apply 'staging-no-changes' label based on diff status
        if: env.STAGING_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["staging-no-changes"]
            })
      - name: Apply 'prod-no-changes' label based on diff status
        if: env.PROD_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["prod-no-changes"]
            })
      - name: Should auto merge
        id: should-auto-merge
        if: env.QA_HAS_NO_DIFF == 'true' && env.STAGING_HAS_NO_DIFF == 'true' && env.PROD_HAS_NO_DIFF == 'true' && github.event.pull_request.user.login == 'cu-infra-svc-git'
        run: echo "auto-merge=true" >> $GITHUB_OUTPUT
      - name: Enable automerge
        uses: daneden/enable-automerge-action@v1.0.2
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          merge-method: SQUASH
          allowed-author: cu-infra-svc-git
      - name: Auto approve
        uses: hmarr/auto-approve-action@v2.2.1
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
      - name: Save processed diff logs
        uses: actions/upload-artifact@v3.1.2
        with:
          name: ProcessedDiffLogs
          path: "*.log"
          retention-days: 3
"
`;

exports[`addCdkDiffWorkflowYml - cdk diff.yml file added node20 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: cdk-diff
on:
  pull_request: {}
  workflow_dispatch: {}
permissions:
  id-token: write
  contents: write
  pull-requests: write
jobs:
  diff:
    runs-on: ubuntu-latest
    env:
      CI: "true"
      REPO_NAME: \${{ github.event.repository.name }}
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: GitHub Packages authorization
        run: |-
          cat > .npmrc <<EOF
          //npm.pkg.github.com/:_authToken=\${{ secrets.ALL_PACKAGE_READ_TOKEN }}
          @time-loop:registry=https://npm.pkg.github.com/
          EOF
      - name: Setup Node.js
        uses: actions/setup-node@v3
        with:
          node-version: 20.5.1
      - name: Install dependencies
        run: yarn install --check-files
      - name: capture stacks to diff
        run: |-
          ./node_modules/.bin/cdk ls -l -j --notices=false > cdk-ls.json
          STACKS_TO_DIFF_QA=$(jq -r '[.[].id | select(contains("Qa")) ] | join(" ")' cdk-ls.json)
          echo "STACKS_TO_DIFF_QA=$STACKS_TO_DIFF_QA" >> $GITHUB_ENV
      - name: configure qa aws credentials
        uses: aws-actions/configure-aws-credentials@v1
        with:
          role-to-assume: arn:aws:iam::123456789012:role/squad-github-actions-oidc-role-name-qa
          role-duration-seconds: 900
          aws-region: us-west-2
      - name: diff qa
        run: |
          set -o pipefail
          ./node_modules/.bin/cdk diff $STACKS_TO_DIFF_QA --progress=events --staging false -e --ignore-errors --version-reporting false &> >(tee cdk-qa.log)
          ./node_modules/.bin/ts-node ./node_modules/@time-loop/cdk-log-parser/lib/cdkLogParser.js cdk-qa.log && echo 'QA_HAS_NO_DIFF=true' >> $GITHUB_ENV || echo 'Diffs present!'
      - name: cdk-notify
        run: |-
          curl -L "https://github.com/karlderkaefer/cdk-notifier/releases/download/v2.3.2/cdk-notifier_$(uname)_amd64.gz" -o cdk-notifier.gz
          gunzip cdk-notifier.gz && chmod +x cdk-notifier && rm -rf cdk-notifier.gz
          ./cdk-notifier --log-file ./cdk-qa.log --repo $REPO_NAME --owner $GITHUB_REPOSITORY_OWNER --token \${{ secrets.GITHUB_TOKEN }} --pull-request-id \${{ github.event.pull_request.number }} -t 'qa Stacks - If truncated please see the action for the full log!'
      - name: Remove 'qa-no-changes' label based on diff status given a previous commit may have had no diff but the current one does
        if: env.QA_HAS_NO_DIFF != 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            const labels = await github.paginate(
            github.rest.issues.listLabelsOnIssue, {
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            }
            )
            if (labels.find(label => label.name === "qa-no-changes")) {
            github.rest.issues.removeLabel({
            owner: context.repo.owner,
            repo: context.repo.repo,
            issue_number: context.issue.number,
            name: "qa-no-changes"
            })
            }
      - name: Apply 'qa-no-changes' label based on diff status
        if: env.QA_HAS_NO_DIFF == 'true'
        uses: actions/github-script@v6
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
          script: |-
            github.rest.issues.addLabels({
            issue_number: context.issue.number,
            owner: context.repo.owner,
            repo: context.repo.repo,
            labels: ["qa-no-changes"]
            })
      - name: Should auto merge
        id: should-auto-merge
        if: env.QA_HAS_NO_DIFF == 'true' && github.event.pull_request.user.login == 'cu-infra-svc-git'
        run: echo "auto-merge=true" >> $GITHUB_OUTPUT
      - name: Enable automerge
        uses: daneden/enable-automerge-action@v1.0.2
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          merge-method: SQUASH
          allowed-author: cu-infra-svc-git
      - name: Auto approve
        uses: hmarr/auto-approve-action@v2.2.1
        if: steps.should-auto-merge.outputs.auto-merge
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
      - name: Save processed diff logs
        uses: actions/upload-artifact@v3.1.2
        with:
          name: ProcessedDiffLogs
          path: "*.log"
          retention-days: 3
"
`;
